--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@misc{marcel_schneuer_digitale_2024,
+	title = {Der {Digitale} {Zwilling} in {Planung}, {Bau} und {Betrieb} - ein Überblick {\textbar} {BIM} {Deutschland}},
+	url = {https://www.bimdeutschland.de/der-digitale-zwilling-in-planung-bau-und-betrieb-ein-ueberblick},
+	language = {DE},
+	urldate = {2024-04-26},
+	journal = {BIM Deutschland},
+	author = {{Marcel Schneuer}},
+	month = apr,
+	year = {2024},
+	preview={briefing1.png},
+	selected={true}
+}
+
+
 @misc{bim_deutschland_bmdv-forderprojekt_2024,
 	title = {{BMDV}-{Förderprojekt}: {Digitale} {Zwillinge} in der {Infrastruktur}},
 	url = {https://www.bimdeutschland.de/bmdv-foerderprojekt-digitale-zwillinge-in-der-infrastruktur#c749},
