--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 	language = {DE},
 	urldate = {2024-04-26},
 	journal = {BIM Deutschland},
-	author = {{Marcel Schneuer}},
+	author = {{BIM Deutschland}},
 	month = apr,
 	year = {2024},
 	preview={briefing1.png},
