--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 
 @misc{marcel_schneuer_digitale_2024,
-	title = {Der {Digitale} {Zwilling} in {Planung}, {Bau} und {Betrieb} - ein Überblick {\textbar} {BIM} {Deutschland}},
+	title = {Der {Digitale} {Zwilling} in {Planung}, {Bau} und {Betrieb} - ein Überblick | {BIM} {Deutschland}},
 	url = {https://www.bimdeutschland.de/der-digitale-zwilling-in-planung-bau-und-betrieb-ein-ueberblick},
 	language = {DE},
 	urldate = {2024-04-26},
